indus/test/test_examples/type_errors/list_push3.tpc
init {
    bool y = false;
    y.push(true);
} 
telemetry {} 
check {}